(lang dune 3.16)

(name bson)

(generate_opam_files true)

(source
 (github zpyemont/bson))

(authors "Zak Pyemont")

(maintainers "Zak Pyemont")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name bson)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
